fix: remove sentinel object for folderless feeds